# emberforge-cpp

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  run-output.txt
.github/workflows/: ci.yml
apps/ember_cli/: main.cpp
include/emberforge/: emberforge.hpp
include/emberforge/api/: hosted_provider.hpp  ollama_provider.hpp  provider.hpp  provider_router.hpp
include/emberforge/commands/: registry.hpp  spec.hpp
include/emberforge/compat/: upstream_paths.hpp
include/emberforge/lsp/: manager.hpp
include/emberforge/persistence/: session_store.hpp
include/emberforge/plugins/: hook.hpp  hook_event.hpp  hook_executor.hpp  hook_runner.hpp  plugin.hpp  registry.hpp
include/emberforge/runtime/: model_router.hpp  runtime.hpp  session.hpp  system_prompt.hpp
include/emberforge/server/: server.hpp
include/emberforge/system/: application.hpp  buddy.hpp  config.hpp  context.hpp  control_sequence.hpp  dispatch.hpp  doctor.hpp  lifecycle.hpp  report.hpp  task_question_state.hpp  turn.hpp
include/emberforge/telemetry/: telemetry.hpp
include/emberforge/tools/: real_executor.hpp  registry.hpp  spec.hpp
include/emberforge/ui/: command_dispatch.hpp  repl.hpp
src/api/: hosted_provider.cpp  ollama_provider.cpp  provider.cpp  provider_router.cpp
src/commands/: registry.cpp
src/compat/: upstream_paths.cpp
src/lsp/: manager.cpp
src/persistence/: session_store.cpp
src/plugins/: hook.cpp  hook_event.cpp  hook_executor.cpp  hook_runner.cpp  plugin.cpp  registry.cpp
src/runtime/: model_router.cpp  runtime.cpp  system_prompt.cpp
src/server/: server.cpp
src/system/: application.cpp  buddy.cpp  control_sequence.cpp  dispatch.cpp  doctor.cpp  task_question_state.cpp  turn.cpp
src/telemetry/: telemetry.cpp
src/tools/: real_executor.cpp  registry.cpp
src/ui/: command_dispatch.cpp  repl.cpp
tests/: test_agentic_loop.cpp  test_command_dispatch.cpp  test_doctor.cpp  test_hook_engine.cpp  test_lsp_manager.cpp  test_model_router.cpp  test_ollama_provider.cpp  test_project_context.cpp  test_prompt_command.cpp  test_provider_router.cpp  test_real_tool_executor.cpp  test_session_store.cpp  test_system_prompt.cpp  test_telemetry.cpp  test_thinking.cpp  test_tool_registry.cpp  test_upstream_paths.cpp
